<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_main" >

    <!-- 订单界面 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <!-- title抬头部分 -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/top_black_bg" >

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:padding="12dp"
                android:src="@drawable/btn_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/order_1"
                android:textColor="@color/white"
                android:textSize="13sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0px"
            android:layout_weight="20"
            android:background="@color/background_main"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@color/gray_1"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/text_1"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/order_2"
                    android:textColor="@color/black_little"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/text_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/order_3"
                    android:textColor="@color/black_little"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/text_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/order_4"
                    android:textColor="@color/black_little"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/text_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/order_5"
                    android:textColor="@color/black_little"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/text_5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/order_6"
                    android:textColor="@color/black_little"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/text_6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/order_7"
                    android:textColor="@color/black_little"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/text_7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/order_8"
                    android:textColor="@color/black_little"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/text_8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/order_9"
                    android:textColor="@color/black_little"
                    android:textSize="13sp" />
            </LinearLayout>

            <order.listview.XListView
                android:id="@+id/list_order"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:cacheColorHint="#00000000"
                android:divider="#00000000"
                android:fadingEdge="none" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>