<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/top_black_bg"
        android:visibility="visible" >

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:padding="10dp"
            android:src="@drawable/btn_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/sign_1"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_plan_btns"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/iv_walk"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_plan_btn"
            android:gravity="center"
            android:text="@string/dh_11"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/iv_drive"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_plan_btn"
            android:gravity="center"
            android:text="@string/dh_12"
            android:textSize="16sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/iv_transit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/selector_plan_btn"
            android:gravity="center"
            android:text="@string/dh_13"
            android:textSize="16sp" />
    </LinearLayout>

    <com.tencent.tencentmap.mapsdk.map.MapView
        android:id="@+id/mapview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/ll_plan_btns" />

    <ListView
        android:id="@+id/lv_plans"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/ll_plan_btns"
        android:background="@android:color/white"
        android:visibility="gone" />

</RelativeLayout>