<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_main" >

    <!-- 选择城市界面 -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <!-- title抬头部分 -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@color/top_black_bg"
            android:visibility="visible" >

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentLeft="true"
                android:padding="12dp"
                android:src="@drawable/btn_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/updatephone_1"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/city_line" />
        <!-- content内容部分 -->

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0px"
                android:layout_weight="10"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:background="@color/white"
                    android:orientation="vertical"
                    android:padding="15dp" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@color/white"
                        android:gravity="center_vertical|left"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:text="@string/updatephone_7"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/t_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="null"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/white"
                        android:gravity="center_vertical|left"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:text="@string/updatephone_5"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/t_old_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="null"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="30dp"
                        android:gravity="bottom"
                        android:orientation="horizontal" >

                        <TextView
                            android:layout_width="90dp"
                            android:layout_height="wrap_content"
                            android:text="@string/updatephone_6"
                            android:textColor="@color/gray"
                            android:textSize="16sp" />

                        <EditText
                            android:id="@+id/ed_new_phone"
                            android:layout_width="fill_parent"
                            android:layout_height="45dp"
                            android:background="@drawable/xian_03"
                            android:gravity="center_vertical"
                            android:hint="@string/updatephone_3"
                            android:maxLength="11"
                            android:numeric="integer"
                            android:paddingRight="5dip"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:typeface="normal" />

                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="2px"
                            android:background="@drawable/city_line" />
                    </LinearLayout>

                    <RelativeLayout
                        android:id="@+id/btn_up"
                        android:layout_width="fill_parent"
                        android:layout_height="40dp"
                        android:layout_marginBottom="50dip"
                        android:layout_marginTop="50dip"
                        android:background="@drawable/btn_login"
                        android:scaleType="fitCenter" >

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="@string/updatephone_2"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>